--- a/direct-http.cabal
+++ b/direct-http.cabal
@@ -25,4 +25,6 @@ Library
                  mtl >= 1.1.0.2 && < 2,
                  network >= 2.2.1.5 && < 3,
                  network-bytestring >= 0.1.2.1 && < 1,
-                 utf8-string >= 0.3.6 && < 1
+                 utf8-string >= 0.3.6 && < 1,
+                 time >= 1.1.4,
+                 old-locale >= 1.0.0.2
