It had been forking at the wrong place, so that it would never have actually worked with concurrent connections.  Fixed.  Also, refactored so that the HTTP monad is entered earlier (the new HTTPConnection record is added, to make this possible) so that server startup can be logged.  Also again, daemonizing properly now, using my new mini-library direct-daemonize.

--- a/direct-http.cabal
+++ b/direct-http.cabal
@@ -27,4 +27,7 @@ Library
                  network-bytestring >= 0.1.2.1 && < 1,
                  utf8-string >= 0.3.6 && < 1,
                  time >= 1.1.4,
-                 old-locale >= 1.0.0.2
+                 old-locale >= 1.0.0.2,
+                 unix >= 2.4.0.1,
+                 
+                 direct-daemonize >= 1.0
