--- a/direct-http.cabal
+++ b/direct-http.cabal
@@ -1,33 +1,35 @@
 name: direct-http
 version: 1.0
-cabal-version: >= 1.2
+cabal-version: >= 1.10
 build-type: Simple
 license: BSD3
 license-file: LICENSE
-copyright: Copyright (c) 2009 Dan Knapp
-author: Dan Knapp
-maintainer: dankna@gmail.com
-homepage: http://dankna.com/software/
-bug-reports: http://dankna.com/issues/create/
+copyright: Copyright (c) 2012 Irene Knapp
+author: Irene Knapp
+maintainer: "Irene Knapp" <ireney.knapp@gmail.com>
+homepage: http://ireneknapp.com/software/
+bug-reports: http://ireneknapp.com/issues/create/
 category: Network
 synopsis: Native webserver that acts as a library.
 description:
   This package is a native implementation of the HTTP and HTTPS protocols.  It
   lives as a library, exporting an interface reminiscent of CGI or FastCGI.
   Thus policy on how namespace is mapped to files and/or scripts is entirely up
-  to the client application.
+  to the client application.  This package is partially compatible with
+  direct-fastcgi by the same author, but is intended more by way of a
+  replacement for it than a companion to it, and makes several design decisions
+  differently.  The biggest is the use of MonadControlBase for exceptions.
 
 Library
   exposed-modules: Network.HTTP
-  build-depends: base >= 4.1 && < 5,
-                 bytestring >= 0.9.1.4 && < 1,
-                 containers >= 0.3.0.0 && < 1,
-                 mtl >= 1.1.0.2 && < 2,
-                 network >= 2.2.1.5 && < 3,
-                 network-bytestring >= 0.1.2.1 && < 1,
-                 utf8-string >= 0.3.6 && < 1,
-                 time >= 1.1.4,
-                 old-locale >= 1.0.0.2,
-                 unix >= 2.4.0.1,
-                 
-                 direct-daemonize >= 1.0
+  build-depends: base >= 4.5 && < 5,
+                 bytestring >= 0.9.2.1 && < 1,
+                 containers >= 0.4.2.1 && < 1,
+                 mtl >= 2.0.1.0 && < 3,
+                 network >= 2.3.0.11 && < 3,
+                 utf8-string >= 0.3.7 && < 1,
+                 time >= 1.4 && < 2,
+                 old-locale >= 1.0.0.4 && < 2,
+                 unix >= 2.5.1.0 && < 3,
+                 direct-daemonize >= 3.0 && < 4
+  default-language: Haskell2010
