--- a/direct-http.cabal
+++ b/direct-http.cabal
@@ -31,5 +31,8 @@ Library
                  time >= 1.4 && < 2,
                  old-locale >= 1.0.0.4 && < 2,
                  unix >= 2.5.1.0 && < 3,
-                 direct-daemonize >= 3.0 && < 4
+                 direct-daemonize >= 3.0 && < 4,
+                 transformers-base >= 0.4.1 && < 1,
+                 lifted-base >= 0.1.1 && < 2,
+                 monad-control >= 0.3.1.3 && < 1
   default-language: Haskell2010
