--- a/direct-http.cabal
+++ b/direct-http.cabal
@@ -1,5 +1,5 @@
 name: direct-http
-version: 1.0
+version: 0.5
 cabal-version: >= 1.10
 build-type: Simple
 license: BSD3
@@ -19,6 +19,12 @@ description:
   direct-fastcgi by the same author, but is intended more by way of a
   replacement for it than a companion to it, and makes several design decisions
   differently.  The biggest is the use of MonadControlBase for exceptions.
+
+  Version 0.5: This preliminary release is a preview to gauge community
+  interest.  Not even all major features are implemented; things that exist
+  only as stubs include encryption, compression, chunking, and reading back
+  cookies.  Nonetheless it may be useful if run behind a reverse proxy that
+  provides the missing features transparently, such as Apache.
 
 Library
   exposed-modules: Network.HTTP
