--- a/direct-http.cabal
+++ b/direct-http.cabal
@@ -12,14 +12,16 @@ bug-reports: http://ireneknapp.com/issues/create/
 category: Network
 synopsis: Native webserver that acts as a library.
 description:
-  This package is a native implementation of the HTTP and HTTPS protocols.  It
-  lives as a library, exporting an interface reminiscent of CGI or FastCGI.
+  This package is a native implementation of the HTTP and HTTPS protocols.
+  It lives as a library, exporting an interface reminiscent of CGI or FastCGI.
   Thus policy on how namespace is mapped to files and/or scripts is entirely up
-  to the client application.  This package is partially compatible with
-  direct-fastcgi by the same author, but is intended more by way of a
-  replacement for it than a companion to it, and makes several design decisions
-  differently.  The biggest is the use of MonadControlBase for exceptions.
-
+  to the client application.
+  .
+  This package is partially compatible with direct-fastcgi by the same
+  author, but is intended more by way of a replacement for it than a companion
+  to it, and makes several design decisions differently.  The biggest is the
+  use of MonadControlBase for exceptions.
+  .
   Version 0.5: This preliminary release is a preview to gauge community
   interest.  Not even all major features are implemented; things that exist
   only as stubs include encryption, compression, chunking, and reading back
