--- a/direct-http.cabal
+++ b/direct-http.cabal
@@ -1,5 +1,5 @@
 name: direct-http
-version: 0.5.0.1
+version: 0.5.1
 cabal-version: >= 1.10
 build-type: Simple
 license: BSD3
@@ -22,6 +22,9 @@ description:
   to it, and makes several design decisions differently.  The biggest is the
   use of MonadControlBase for exceptions.
   .
+  Version 0.5.1: Uses SafeSemaphore, which is the future, rather than QSem
+  from base, which is deprecated.
+  .
   Version 0.5.0.1: This preliminary release is a preview to gauge community
   interest.  Not even all major features are implemented; things that exist
   only as stubs include encryption, compression, chunking, and reading back
@@ -42,5 +45,6 @@ Library
                  direct-daemonize >= 3.0 && < 4,
                  transformers-base >= 0.4.1 && < 1,
                  lifted-base >= 0.1.1 && < 2,
-                 monad-control >= 0.3.1.3 && < 1
+                 monad-control >= 0.3.1.3 && < 1,
+                 SafeSemaphore >= 0.9.0 && < 1
   default-language: Haskell2010
